vision-demo-2026/agents/prtriage/yaml/80-release-agent.yaml
apiVersion: ar.dev/v1alpha1
kind: Deployment
metadata:
  name: releasejava
spec:
  targetRef:  { kind: Agent,   name: releasejava }
  runtimeRef: { kind: Runtime, name: kind-kagent }
