vision-demo-2026/agents/prtriage/yaml/85-unscoped-agent.yaml
apiVersion: ar.dev/v1alpha1
kind: Deployment
metadata:
  name: changelogjava
spec:
  targetRef:  { kind: Agent,   name: changelogjava }
  runtimeRef: { kind: Runtime, name: kind-kagent }
